force-app/main/default/objects/QTC_Mig_OrderProducts__c/fields/Invoice_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Start_Date__c</fullName>
    <label>Invoice Start Date</label>
    <type>Date</type>
</CustomField>