force-app/main/default/objects/QTC_Mig_OrderProducts__c/fields/OL_Future_Invoice_Indicator__c.field-meta.xml
<CustomField>
    <fullName>OL_Future_Invoice_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OL Future Invoice</label>
    <type>Checkbox</type>
</CustomField>