force-app/main/default/objects/QTC_Mig_OrderProducts__c/fields/OL_Partially_paid_invoice__c.field-meta.xml
<CustomField>
    <fullName>OL_Partially_paid_invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OL Partially paid invoice</label>
    <type>Checkbox</type>
</CustomField>