force-app/main/default/objects/QTC_Mig_OrderProducts__c/fields/Rev_Rec_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_End_Date__c</fullName>
    <label>Rev Rec End Date</label>
    <type>Date</type>
</CustomField>